--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing Page</title>
+    <title>Web Magic</title>
     <meta name="description" content="Landing Page">
     <meta name="keywords" content="landing page, web dev, web design">
     <meta http-equiv="X-UA-Compatible" content="IE=7">
