--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
     <span class="navbar-bran">Web Magic</span>
     <ul class="navbar-menu">
       <li><a href="/">Home</a></li>
-      <li><a href="/about.html">About</a></li>
-      <li><a href="/contact.html">Contact</a></li>
+      <li><a href="/about">About</a></li>
+      <li><a href="/contact">Contact</a></li>
     </ul>
   </nav>
   
